// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsteriskIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-AsteriskIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={18}
  viewBox="0 0 18 18"
>
  <path
    d="M10 7.268l1.964-1.134c.478-.276 1.09-.112 1.366.366s.112 1.09-.366 1.366L11 9l1.964 1.134c.478.276.642.888.366 1.366-.276.478-.888.642-1.366.366L10 10.732V13c0 .552-.448 1-1 1s-1-.448-1-1v-2.268l-1.964 1.134c-.478.276-1.09.112-1.366-.366s-.112-1.09.366-1.366L7 9 5.036 7.866c-.478-.276-.642-.888-.366-1.366.276-.478.888-.642 1.366-.366L8 7.268V5c0-.552.448-1 1-1s1 .448 1 1v2.268z"
  />
</Icon>
`;

exports[`AsteriskIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-AsteriskIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={18}
  viewBox="0 0 18 18"
>
  <path
    d="M10 7.268l1.964-1.134c.478-.276 1.09-.112 1.366.366s.112 1.09-.366 1.366L11 9l1.964 1.134c.478.276.642.888.366 1.366-.276.478-.888.642-1.366.366L10 10.732V13c0 .552-.448 1-1 1s-1-.448-1-1v-2.268l-1.964 1.134c-.478.276-1.09.112-1.366-.366s-.112-1.09.366-1.366L7 9 5.036 7.866c-.478-.276-.642-.888-.366-1.366.276-.478.888-.642 1.366-.366L8 7.268V5c0-.552.448-1 1-1s1 .448 1 1v2.268z"
  />
</Icon>
`;

exports[`AsteriskIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-AsteriskIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={18}
  viewBox="0 0 18 18"
>
  <path
    d="M10 7.268l1.964-1.134c.478-.276 1.09-.112 1.366.366s.112 1.09-.366 1.366L11 9l1.964 1.134c.478.276.642.888.366 1.366-.276.478-.888.642-1.366.366L10 10.732V13c0 .552-.448 1-1 1s-1-.448-1-1v-2.268l-1.964 1.134c-.478.276-1.09.112-1.366-.366s-.112-1.09.366-1.366L7 9 5.036 7.866c-.478-.276-.642-.888-.366-1.366.276-.478.888-.642 1.366-.366L8 7.268V5c0-.552.448-1 1-1s1 .448 1 1v2.268z"
  />
</Icon>
`;

exports[`AsteriskIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-AsteriskIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={18}
  viewBox="0 0 18 18"
>
  <path
    d="M10 7.268l1.964-1.134c.478-.276 1.09-.112 1.366.366s.112 1.09-.366 1.366L11 9l1.964 1.134c.478.276.642.888.366 1.366-.276.478-.888.642-1.366.366L10 10.732V13c0 .552-.448 1-1 1s-1-.448-1-1v-2.268l-1.964 1.134c-.478.276-1.09.112-1.366-.366s-.112-1.09.366-1.366L7 9 5.036 7.866c-.478-.276-.642-.888-.366-1.366.276-.478.888-.642 1.366-.366L8 7.268V5c0-.552.448-1 1-1s1 .448 1 1v2.268z"
  />
</Icon>
`;

exports[`AsteriskIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-AsteriskIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={18}
  viewBox="0 0 18 18"
>
  <path
    d="M10 7.268l1.964-1.134c.478-.276 1.09-.112 1.366.366s.112 1.09-.366 1.366L11 9l1.964 1.134c.478.276.642.888.366 1.366-.276.478-.888.642-1.366.366L10 10.732V13c0 .552-.448 1-1 1s-1-.448-1-1v-2.268l-1.964 1.134c-.478.276-1.09.112-1.366-.366s-.112-1.09.366-1.366L7 9 5.036 7.866c-.478-.276-.642-.888-.366-1.366.276-.478.888-.642 1.366-.366L8 7.268V5c0-.552.448-1 1-1s1 .448 1 1v2.268z"
  />
</Icon>
`;

exports[`AsteriskIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-AsteriskIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={18}
  viewBox="0 0 18 18"
>
  <path
    d="M10 7.268l1.964-1.134c.478-.276 1.09-.112 1.366.366s.112 1.09-.366 1.366L11 9l1.964 1.134c.478.276.642.888.366 1.366-.276.478-.888.642-1.366.366L10 10.732V13c0 .552-.448 1-1 1s-1-.448-1-1v-2.268l-1.964 1.134c-.478.276-1.09.112-1.366-.366s-.112-1.09.366-1.366L7 9 5.036 7.866c-.478-.276-.642-.888-.366-1.366.276-.478.888-.642 1.366-.366L8 7.268V5c0-.552.448-1 1-1s1 .448 1 1v2.268z"
  />
</Icon>
`;
